--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "devza-assignment",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~10.0.7",
+    "@angular/compiler-cli": "~10.0.11", 
     "@angular/animations": "~10.0.11",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
@@ -21,7 +28,8 @@
     "@angular/router": "~10.0.11",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "typescript": "~3.9.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.7",
